--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "video.js": "^5.4.4"
   }
 }
